--- a/app/product-card.html
+++ b/app/product-card.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Document</title>
     <link
-      href="https://fonts.googleapis.com/css?family=Roboto:500,700&display=swap"
+      href="https://fonts.googleapis.com/css?family=Roboto:300,500,700&display=swap"
       rel="stylesheet"
     />
     <link
@@ -377,48 +377,70 @@
                   <div class="tab_content">
                     <div class="tab-item active-tab" id="1">
                       <ul class="tab-items__list">
-                        <li class="angle-right">Printing and typesetting industry</li>
+                        <li class="angle-right">
+                          Printing and typesetting industry
+                        </li>
                         <li class="angle-right">Bhen an unknown printe</li>
                         <li class="angle-right">Handard dummy text</li>
                         <li class="angle-right">Desktop publishing software</li>
                         <li class="angle-right">Bhen an unknown printe</li>
-                        <li class="angle-right">Printing and typesetting industry</li>
+                        <li class="angle-right">
+                          Printing and typesetting industry
+                        </li>
                         <li class="angle-right">Bhen an unknown printe</li>
                         <li class="angle-right">Handard dummy text</li>
                       </ul>
                     </div>
                     <div class="tab-item" id="2">
                       <ul class="tab-items__list">
-                        <li class="angle-right">2 Printing and typesetting industry</li>
+                        <li class="angle-right">
+                          2 Printing and typesetting industry
+                        </li>
                         <li class="angle-right">2 Bhen an unknown printe</li>
                         <li class="angle-right">2 Handard dummy text</li>
-                        <li class="angle-right">2 Desktop publishing software</li>
+                        <li class="angle-right">
+                          2 Desktop publishing software
+                        </li>
                         <li class="angle-right">2 Bhen an unknown printe</li>
-                        <li class="angle-right">2 Printing and typesetting industry</li>
+                        <li class="angle-right">
+                          2 Printing and typesetting industry
+                        </li>
                         <li class="angle-right">2 Bhen an unknown printe</li>
                         <li class="angle-right">2 Handard dummy text</li>
                       </ul>
                     </div>
                     <div class="tab-item" id="3">
                       <ul class="tab-items__list">
-                        <li class="angle-right">3 Printing and typesetting industry</li>
+                        <li class="angle-right">
+                          3 Printing and typesetting industry
+                        </li>
                         <li class="angle-right">3 Bhen an unknown printe</li>
                         <li class="angle-right">3 Handard dummy text</li>
-                        <li class="angle-right">3 Desktop publishing software</li>
+                        <li class="angle-right">
+                          3 Desktop publishing software
+                        </li>
                         <li class="angle-right">3 Bhen an unknown printe</li>
-                        <li class="angle-right">3 Printing and typesetting industry</li>
+                        <li class="angle-right">
+                          3 Printing and typesetting industry
+                        </li>
                         <li class="angle-right">3 Bhen an unknown printe</li>
                         <li class="angle-right">3 Handard dummy text</li>
                       </ul>
                     </div>
                     <div class="tab-item" id="4">
                       <ul class="tab-items__list">
-                        <li class="angle-right">4 Printing and typesetting industry</li>
+                        <li class="angle-right">
+                          4 Printing and typesetting industry
+                        </li>
                         <li class="angle-right">4 Bhen an unknown printe</li>
                         <li class="angle-right">4 Handard dummy text</li>
-                        <li class="angle-right">4 Desktop publishing software</li>
+                        <li class="angle-right">
+                          4 Desktop publishing software
+                        </li>
                         <li class="angle-right">4 Bhen an unknown printe</li>
-                        <li class="angle-right">4 Printing and typesetting industry</li>
+                        <li class="angle-right">
+                          4 Printing and typesetting industry
+                        </li>
                         <li class="angle-right">4 Bhen an unknown printe</li>
                         <li class="angle-right">4 Handard dummy text</li>
                       </ul>
@@ -514,7 +536,75 @@
                 </div>
               </div>
 
-              <div class="product-card__aside"></div>
+              <div class="product-card__aside">
+                <div class="aside__item product__price">
+                  <div class="aside__title">
+                    Product Price
+                  </div>
+                  <div class="price__box">
+                    <div class="price__product">
+                      $59.00
+                    </div>
+                    <form>
+                      <select>
+                        <option>Regular</option>
+                        <option>Premium</option>
+                      </select>
+                    </form>
+                  </div>
+                  <button class="icon-shopping-cart">Add To Cart</button>
+                  <button class="icon-heart-o">Add To Favourites</button>
+                  <button>Buy Now</button>
+                </div>
+                <div class="aside__item">
+                  <div class="aside__title">
+                    Product Author
+                  </div>
+                  <div class="product-author__box">
+                    <div class="author__avatar">
+                      <img src="images/content/avatar.jpg" alt="" />
+                    </div>
+                    <div class="author__info">
+                      <div class="author__info-name">PsdBoss</div>
+                      <a href="#" class="author__info-link">View Profile</a>
+                    </div>
+                  </div>
+                  <ul class="author__awards-list">
+                      <li class="icon-meh-o"></li>
+                      <li class="icon-pagelines"></li>
+                      <li class="icon-flash"></li>
+                      <li class="icon-foursquare"></li>
+                      <li class="icon-yen"></li>
+                    </ul>
+                </div>
+                <div class="aside__item sales-number">
+                  <div class="aside__item-sales">
+                    <span>05 </span>Sales
+                  </div>
+                </div>
+                <div class="aside__item">
+                  <div class="aside__title">
+                    Product Information
+                  </div>
+                  <div class="information__line">
+                    <span>Released On:</span>1 January, 2016
+                  </div>
+                  <div class="information__line">
+                    <span> Last Update:</span>20 April, 2016
+                  </div>
+                  <div class="information__line">
+                    <span>Download:</span>613
+                  </div>
+                  <div class="information__line"><span>Version:</span>1.1</div>
+                  <div class="information__line">
+                    <span>Compatibility:</span>Wordpress 4+
+                  </div>
+                  <div class="information__line">
+                    <span>Compatible Browsers:</span> <br>IE9, IE10, IE11, Firefox,
+                    Safari, Opera, Chrome
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
         </section>
