--- a/app/contacts.html
+++ b/app/contacts.html
@@ -13,6 +13,10 @@
       href="https://fonts.googleapis.com/css?family=Raleway:700&display=swap"
       rel="stylesheet"
     />
+    <link
+      href="https://fonts.googleapis.com/css?family=Open+Sans:400,800&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="css/libs.min.css" />
     <link rel="stylesheet" href="css/style.min.css" />
   </head>
@@ -325,290 +329,58 @@
             <div class="breadcrumbs__inner">
               <ul class="breadcrumbs__list">
                 <li><a href="index.html">Home</a></li>
-                <li><a href="#">Product Page</a></li>
-                <li><span>WordPress GT Builder Construction</span></li>
+                <li><span>Cotact US</span></li>
               </ul>
             </div>
           </div>
         </div>
-        <!-- start about product card -->
-        <section class="product-card">
+
+        <section class="contact">
           <div class="container">
-            <div class="product-card__inner">
-              <div class="product-card__content">
-                <div class="product-card__images-inner">
-                  <div
-                    class="product-card__images"
-                    style="background-image: url(images/content/product_img/gtbuilder.jpg);"
-                  ></div>
-                </div>
-                <div class="product-card__title">
-                  GTBuilder - Construction & Building WordPress Theme
-                </div>
-                <p class="product-card__text">
-                  Bmply dummy text of the printing and typesetting industry.
-                  Lorem Ipsum has been the industry's standard dummy text ever
-                  since the 1500s, when an unknown printer took a galley of type
-                  and scrambled it to make a type specimen book. It has survived
-                  noning essentially unchanged.
-                </p>
-                <div class="product-card__box">
-                  <div class="product-card__link">
-                    <a class="link-live" href="#">Live Preview</a>
-                    <a class="link-screenshots" href="#">Screenshots</a>
-                    <a class="link-documentation" href="#">Documentation</a>
-                  </div>
-                  <div class="product-card__social">
-                    <a class="icon-facebook" href="#"></a>
-                    <a class="icon-twitter" href="#"></a>
-                    <a class="icon-linkedin" href="#"></a>
-                    <a class="icon-pinterest-p" href="#"></a>
-                  </div>
-                </div>
-
-                <!-- start tabs -->
-                <div class="product-card__tabs">
-                  <div class="tabs">
-                    <span class="tab active" data-id="1">Item Features</span>
-                    <span class="tab" data-id="2">Comments</span>
-                    <span class="tab" data-id="3">Reviews</span>
-                    <span class="tab" data-id="4">Support</span>
-                  </div>
-                  <div class="tab_content">
-                    <div class="tab-item active-tab" id="1">
-                      <ul class="tab-items__list">
-                        <li class="angle-right">
-                          Printing and typesetting industry
-                        </li>
-                        <li class="angle-right">Bhen an unknown printe</li>
-                        <li class="angle-right">Handard dummy text</li>
-                        <li class="angle-right">Desktop publishing software</li>
-                        <li class="angle-right">Bhen an unknown printe</li>
-                        <li class="angle-right">
-                          Printing and typesetting industry
-                        </li>
-                        <li class="angle-right">Bhen an unknown printe</li>
-                        <li class="angle-right">Handard dummy text</li>
-                      </ul>
-                    </div>
-                    <div class="tab-item" id="2">
-                      <ul class="tab-items__list">
-                        <li class="angle-right">
-                          2 Printing and typesetting industry
-                        </li>
-                        <li class="angle-right">2 Bhen an unknown printe</li>
-                        <li class="angle-right">2 Handard dummy text</li>
-                        <li class="angle-right">
-                          2 Desktop publishing software
-                        </li>
-                        <li class="angle-right">2 Bhen an unknown printe</li>
-                        <li class="angle-right">
-                          2 Printing and typesetting industry
-                        </li>
-                        <li class="angle-right">2 Bhen an unknown printe</li>
-                        <li class="angle-right">2 Handard dummy text</li>
-                      </ul>
-                    </div>
-                    <div class="tab-item" id="3">
-                      <ul class="tab-items__list">
-                        <li class="angle-right">
-                          3 Printing and typesetting industry
-                        </li>
-                        <li class="angle-right">3 Bhen an unknown printe</li>
-                        <li class="angle-right">3 Handard dummy text</li>
-                        <li class="angle-right">
-                          3 Desktop publishing software
-                        </li>
-                        <li class="angle-right">3 Bhen an unknown printe</li>
-                        <li class="angle-right">
-                          3 Printing and typesetting industry
-                        </li>
-                        <li class="angle-right">3 Bhen an unknown printe</li>
-                        <li class="angle-right">3 Handard dummy text</li>
-                      </ul>
-                    </div>
-                    <div class="tab-item" id="4">
-                      <ul class="tab-items__list">
-                        <li class="angle-right">
-                          4 Printing and typesetting industry
-                        </li>
-                        <li class="angle-right">4 Bhen an unknown printe</li>
-                        <li class="angle-right">4 Handard dummy text</li>
-                        <li class="angle-right">
-                          4 Desktop publishing software
-                        </li>
-                        <li class="angle-right">4 Bhen an unknown printe</li>
-                        <li class="angle-right">
-                          4 Printing and typesetting industry
-                        </li>
-                        <li class="angle-right">4 Bhen an unknown printe</li>
-                        <li class="angle-right">4 Handard dummy text</li>
-                      </ul>
-                    </div>
-                  </div>
-                </div>
-                <!-- end tabs -->
-
-                <div class="product-card__more">
-                  <div class="product-card__more-title">
-                    More Product by PsdBosS
-                  </div>
-                  <div class="product-card__more-icons">
-                    <div class="product-card__more-icon productmini">
-                      <div
-                        class="productmini__images"
-                        style="background-image: url(images/content/product_img/product_more/more1.jpg);"
-                      ></div>
-                      <div class="productmini__info">
-                        <div class="productmini__name">
-                          Grand Ballet - Dance
-                        </div>
-                        <div class="productmini__thema">PSD Template</div>
-                        <div class="productmini__price">$12</div>
-                      </div>
-                    </div>
-                    <div class="product-card__more-icon productmini">
-                      <div
-                        class="productmini__images"
-                        style="background-image: url(images/content/product_img/product_more/more2.jpg);"
-                      ></div>
-                      <div class="productmini__info">
-                        <div class="productmini__name">
-                          Grand Ballet - Dance
-                        </div>
-                        <div class="productmini__thema">PSD Template</div>
-                        <div class="productmini__price">$59</div>
-                      </div>
-                    </div>
-                    <div class="product-card__more-icon productmini">
-                      <div
-                        class="productmini__images"
-                        style="background-image: url(images/content/product_img/product_more/more3.jpg);"
-                      ></div>
-                      <div class="productmini__info">
-                        <div class="productmini__name">
-                          Grand Ballet - Dance
-                        </div>
-                        <div class="productmini__thema">PSD Template</div>
-                        <div class="productmini__price">$48</div>
-                      </div>
-                    </div>
-                    <div class="product-card__more-icon productmini">
-                      <div
-                        class="productmini__images"
-                        style="background-image: url(images/content/product_img/product_more/more4.jpg);"
-                      ></div>
-                      <div class="productmini__info">
-                        <div class="productmini__name">
-                          Grand Ballet - Dance
-                        </div>
-                        <div class="productmini__thema">Component</div>
-                        <div class="productmini__price">$18</div>
-                      </div>
-                    </div>
-                    <div class="product-card__more-icon productmini">
-                      <div
-                        class="productmini__images"
-                        style="background-image: url(images/content/product_img/product_more/more5.jpg);"
-                      ></div>
-                      <div class="productmini__info">
-                        <div class="productmini__name">
-                          Grand Ballet - Dance
-                        </div>
-                        <div class="productmini__thema">PSD Template</div>
-                        <div class="productmini__price">$29</div>
-                      </div>
-                    </div>
-                    <div class="product-card__more-icon productmini">
-                      <div
-                        class="productmini__images"
-                        style="background-image: url(images/content/product_img/product_more/more6.jpg);"
-                      ></div>
-                      <div class="productmini__info">
-                        <div class="productmini__name">
-                          Grand Ballet - Dance
-                        </div>
-                        <div class="productmini__thema">Hoomla</div>
-                        <div class="productmini__price">$18</div>
-                      </div>
-                    </div>
-                  </div>
-                </div>
+            <div class="contact__wrapper">
+              <div class="contact__head">
+                  Contact With Us
               </div>
-
-              <div class="product-card__aside">
-                <div class="aside__item product__price">
-                  <div class="aside__title">
-                    Product Price
-                  </div>
-                  <div class="price__box">
-                    <div class="price__product">
-                      $59.00
+              <div class="contact__inner">
+                <div class="contact__map">
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d25215.73159857303!2d144.9544505221104!3d-37.81425482490582!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6ad642c7d80af589%3A0x50d4281bb3c09798!2sAshley%20West%20%26%20Co!5e0!3m2!1suk!2sua!4v1570041033076!5m2!1suk!2sua" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+                </div>
+                <div class="contact__box">
+                  <div class="contact__info">
+                    <div class="contact__info-item">
+                      <div class="contact__info-title icon-map-marker">Our Office Address</div>
+                      <div class="contact__info-content">
+                        PO Box 16122 Collins Street West Victoria 8007 Australia
+                      </div>
                     </div>
+                    <div class="contact__info-item">
+                      <div class="contact__info-title icon-phone">Phone</div>
+                      <a
+                        href="tel:61383766284"
+                        class="contact__info-content"
+                      >+61 3 8376 6284</a>
+                    </div>
+                    <div class="contact__info-item">
+                      <div class="contact__info-title icon-envelope-o">E-mail</div>
+                      <div class="contact__info-content">info@foxtar.com</div>
+                    </div>
+                  </div>
+                  <div class="contact__form">
+                    <div class="contact__form-title">Drop Us A Message </div>
                     <form>
-                      <select>
-                        <option>Regular</option>
-                        <option>Premium</option>
-                      </select>
+                      <div class="contact__form-row">
+                        <input type="text" placeholder="Name*" required>
+                        <input type="text" placeholder="E-mail*" required>
+                      </div>
+                      <textarea placeholder="Messege*" required></textarea>
+                      <button type="submit">Send Message</button>
                     </form>
-                  </div>
-                  <button class="icon-shopping-cart">Add To Cart</button>
-                  <button class="icon-heart-o">Add To Favourites</button>
-                  <button>Buy Now</button>
-                </div>
-                <div class="aside__item">
-                  <div class="aside__title">
-                    Product Author
-                  </div>
-                  <div class="product-author__box">
-                    <div class="author__avatar">
-                      <img src="images/content/avatar.jpg" alt="" />
-                    </div>
-                    <div class="author__info">
-                      <div class="author__info-name">PsdBoss</div>
-                      <a href="#" class="author__info-link">View Profile</a>
-                    </div>
-                  </div>
-                  <ul class="author__awards-list">
-                      <li class="icon-meh-o"></li>
-                      <li class="icon-pagelines"></li>
-                      <li class="icon-flash"></li>
-                      <li class="icon-foursquare"></li>
-                      <li class="icon-yen"></li>
-                    </ul>
-                </div>
-                <div class="aside__item sales-number">
-                  <div class="aside__item-sales">
-                    <span>05 </span>Sales
-                  </div>
-                </div>
-                <div class="aside__item">
-                  <div class="aside__title">
-                    Product Information
-                  </div>
-                  <div class="information__line">
-                    <span>Released On:</span>1 January, 2016
-                  </div>
-                  <div class="information__line">
-                    <span> Last Update:</span>20 April, 2016
-                  </div>
-                  <div class="information__line">
-                    <span>Download:</span>613
-                  </div>
-                  <div class="information__line"><span>Version:</span>1.1</div>
-                  <div class="information__line">
-                    <span>Compatibility:</span>Wordpress 4+
-                  </div>
-                  <div class="information__line">
-                    <span>Compatible Browsers:</span> <br>IE9, IE10, IE11, Firefox,
-                    Safari, Opera, Chrome
                   </div>
                 </div>
               </div>
             </div>
           </div>
         </section>
-        <!-- end about product card -->
       </div>
       <!-- start footer -->
       <footer class="footer">
