--- a/app/index.html
+++ b/app/index.html
@@ -278,7 +278,7 @@
                     </a>
                   </li>
                   <li>
-                    <a href="#">
+                    <a href="contacts.html">
                       Contact
                     </a>
                   </li>
