--- a/app/page.html
+++ b/app/page.html
@@ -212,7 +212,7 @@
                           </a>
                         </li>
                         <li>
-                          <a href="#">
+                          <a href="contacts.html">
                             Contact
                           </a>
                         </li>
